/*
 * Copyright (c)  2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 * WSO2 Inc. licenses this file to you under the Apache License,
 * Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.wso2.grpc";

package org.wso2.grpc.eventservice;

import "google/protobuf/empty.proto";

service EventService {
    rpc process(Event) returns (Event) {}

    rpc consume(stream Event) returns (google.protobuf.Empty) {}
}

message Event {
    string payload = 1;
    map<string, string> headers = 2;
}
